testdata/baselines/reference/submodule/compiler/declarationEmitCastReusesTypeNode4(strictnullchecks=true).errors.txt
input.js(18,9): error TS8009: The 'readonly' modifier can only be used in TypeScript files.


==== input.js (1 errors) ====
    /**
     * @typedef {{ } & { name?: string }} P
     */
    
    const something = /** @type {*} */(null);
    
    export let vLet = /** @type {P} */(something);
    export const vConst = /** @type {P} */(something);
    
    export function fn(p = /** @type {P} */(something)) {}
    
    /** @param {number} req */
    export function fnWithRequiredDefaultParam(p = /** @type {P} */(something), req) {}
    
    export class C {
        field = /** @type {P} */(something);
        /** @optional */ optField = /** @type {P} */(something); // not a thing
        /** @readonly */ roFiled = /** @type {P} */(something);
            ~~~~~~~~~~
!!! error TS8009: The 'readonly' modifier can only be used in TypeScript files.
        method(p = /** @type {P} */(something)) {}
        /** @param {number} req */
        methodWithRequiredDefault(p = /** @type {P} */(something), req) {}
    
        constructor(ctorField = /** @type {P} */(something)) {}
    
        get x() { return /** @type {P} */(something) }
        set x(v) { }
    }
    
    export default /** @type {P} */(something);
    
    // allows `undefined` on the input side, thanks to the initializer
    /**
     * 
     * @param {P} x
     * @param {number} b
     */
    export function fnWithPartialAnnotationOnDefaultparam(x = /** @type {P} */(something), b) {}